--- a/src/app/shared/components/footer-home/footer-home.component.html
+++ b/src/app/shared/components/footer-home/footer-home.component.html
@@ -8,7 +8,7 @@
                         <div class="">
                             <h2 class="fuenteOcho text-light m-0 fs-40">{{ 'titulo_blog' | translate }}</h2>
                             <br>
-                            <p class="fuenteDos c7">{{ 'Presentacion' | translate }}</p>
+                            <p class="f-open-sans-c c7">{{ 'Presentacion' | translate }}</p>
                         </div>
                     </div>
                     <div class="col-md-6 text-center">
@@ -21,7 +21,7 @@
             </div>
             <div class="col-md-6">
                 <div class="text-center">
-                    <div class="form-group fuenteDos">
+                    <div class="form-group f-open-sans-c">
                         <form [formGroup]="formContact">
                             <input type="email" class="form-control tc-yellow-two" id="email" placeholder="{{ 'Email' | translate }}" formControlName="email">
                             <textarea class="form-control tc-yellow-two" id="texarea" rows="3" placeholder="{{ 'Comentarios' | translate }}" formControlName="comentarios"></textarea>
