--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -16,7 +16,7 @@
                     </span>
                 </a>
             </div>
-            <div class="col-2 d-flex justify-content-around fuenteDos">
+            <div class="col-2 d-flex justify-content-around f-open-sans-c">
                 <a class="text-decoration-none mt-2" href="#categories">{{'Categorias' | translate }}</a>
                 <a class="text-decoration-none mt-2" href="#contact">{{'Contacto' | translate }}</a>
             </div>
