--- a/src/app/shared/components/phrases/phrases.component.html
+++ b/src/app/shared/components/phrases/phrases.component.html
@@ -3,7 +3,7 @@
     <div class="col-md-8 d-flex justify-content-end">
         <div class="parchment p-5" style='background-image:url("assets/img/banner/parchment.png");background-repeat:no-repeat;background-size:contain;'>
             <h2 class="comillas text-left">“</h2>
-            <h4 class="tituloDos text-center fs-30 lh-30 text-phrases">{{ displayText }}</h4>
+            <h4 class="f-open-sans-c text-center fs-30 lh-30 text-phrases">{{ displayText }}</h4>
             <h2 class="text-author f-alex-brush fs-50 text-center">{{ author }}</h2>
             <div class="espaciado"></div>
         </div>
