--- a/src/app/shared/components/galery-post/galery-post.component.html
+++ b/src/app/shared/components/galery-post/galery-post.component.html
@@ -24,7 +24,7 @@
                 <div class="mt-5">
                     <h4 class="tituloPost f-bebas">{{ post.nombre | translate }}</h4>
                 </div>
-                <p class="fuenteDos fs-17 lh-23 text-light">{{ post.descripcionCorta | translate }}</p>
+                <p class="f-open-sans-c fs-17 lh-23 text-light">{{ post.descripcionCorta | translate }}</p>
                 <time><p class="f-shadow-into-l text-light fs-15 m-0">{{ post.fechaActualizacion? post.fechaActualizacion : post.fechaCreacion | translate }}</p></time>
                 <a class="f-open-sans-c leerMas mt-2" href="{{ post.ruta }}">{{ 'LeerMas' | translate }} &gt;</a>
             </div>
