--- a/src/app/features/blog/posts/developer/dev-category/dev-category.component.html
+++ b/src/app/features/blog/posts/developer/dev-category/dev-category.component.html
@@ -3,9 +3,9 @@
 
 <div class="espaciado"></div>
 
-<!-- <app-category-header [nombreCategoria]="'developer'" [idPost]="idPost" [adds]="partsAdds"></app-category-header> -->
+<app-category-header [nombreCategoria]="'developer'" [idPost]="idPost" [adds]="partsAdds"></app-category-header>
 
-<app-dev-category-header [nombreCategoria]="'developer'" [idPost]="idPost" [adds]="partsAdds"></app-dev-category-header>
+<!-- <app-dev-category-header [nombreCategoria]="'developer'" [idPost]="idPost" [adds]="partsAdds"></app-dev-category-header> -->
 
 
 
