--- a/src/app/features/blog/posts/developer/dev-category/dev-category-content/dev-category-content.component.html
+++ b/src/app/features/blog/posts/developer/dev-category/dev-category-content/dev-category-content.component.html
@@ -5,118 +5,33 @@
         <div class="row">
 
             <div class="col-md-5">
-                <app-first-description-block [content]="roadMapDescriptions" [categoryColor]="this.categoria.color" [ref]="'front'"></app-first-description-block>
+                <app-first-description-block [content]="frontendRoadMap" [categoryColor]="this.categoria.color"
+                    [ref]="'front'"></app-first-description-block>
             </div>
             <div class="col-md-7">
                 <h2 class="text-light fuenteOcho categorias title-menu">ROADMAP - FRONTEND DEVELOPER</h2>
                 <img src="assets/img/extructures/frontend.png" alt="Roadmap Frontend dev" class="img-fluid drop">
-                <p class="text-light f-open-sans-c lh-25 text-end"><small>Basada en <a href="https://roadmap.sh/" target="_blank">Roadmap.sh</a></small></p>
+                <p class="text-light f-open-sans-c lh-25 text-end"><small>Basada en <a href="https://roadmap.sh/"
+                            target="_blank">Roadmap.sh</a></small></p>
             </div>
         </div>
 
         <div class="espaciado"></div>
-        
+
         <div class="row">
             <div class="col-md-7">
                 <h2 class="text-light fuenteOcho categorias title-menu">ROADMAP - BACKEND DEVELOPER</h2>
                 <img src="assets/img/extructures/backend.png" alt="Roadmap Frontend dev" class="img-fluid drop">
-                <p class="text-light f-open-sans-c lh-25 text-end"><small>Basada en <a href="https://roadmap.sh/" target="_blank">Roadmap.sh</a></small></p>
+                <p class="text-light f-open-sans-c lh-25 text-end"><small>Basada en <a href="https://roadmap.sh/"
+                            target="_blank">Roadmap.sh</a></small></p>
             </div>
             <div class="col-md-5">
-                <h2 class="fuenteSeis fs-50 {{ this.categoria.color }}">Language</h2>
-                <p class="text-light f-open-sans-c fs-20 lh-25">
-                    Lenguaje de programación que te permite crear aplicaciones web y servicios en el lado del servidor. Es una parte fundamental del desarrollo backend y te ayuda a crear aplicaciones escalables, seguras y eficientes. (Node.js, Python, Ruby, Java, PHP).
-                </p>
+                <app-first-description-block [content]="backendRoadMap" [categoryColor]="this.categoria.color"
+                    [ref]="'backend'"></app-first-description-block>
 
-                <h2 class="fuenteSeis fs-50 {{ this.categoria.color }}">Repo Hosting Service</h2>
-                <p class="text-light f-open-sans-c fs-20 lh-25">
-                    Plataforma en línea que te permite alojar tu repositorio de código y colaborar con otros desarrolladores. Es una parte fundamental del desarrollo backend y te permite compartir tu código, colaborar en proyectos y mantener un historial de cambios. (GitHub, GitLab, Bitbucket).
-                </p>
-
-                <h2 class="fuenteSeis fs-50 {{ this.categoria.color }}">OS and General Knowledge</h2>
-                <p class="text-light f-open-sans-c fs-20 lh-25">
-                    Conocimientos básicos sobre sistemas operativos y tecnologías generales que te ayudan a comprender cómo funcionan las aplicaciones y servicios en el lado del servidor. Son una parte fundamental del desarrollo backend y te ayudan a crear aplicaciones escalables, seguras y eficientes.
-                </p>
-
-                <h2 class="fuenteSeis fs-50 {{ this.categoria.color }}">Relational Databases</h2>
-                <p class="text-light f-open-sans-c fs-20 lh-25">
-                    Base de datos que utiliza un modelo de datos relacional para almacenar y gestionar la información. Es una parte fundamental del desarrollo backend y te ayuda a crear aplicaciones escalables, seguras y eficientes. (MySQL, PostgreSQL, SQLite).
-                </p>
-                <h2 class="fuenteSeis fs-50 {{ this.categoria.color }}">NoSQL Databases</h2>
-                <p class="text-light f-open-sans-c fs-20 lh-25">
-                    Base de datos que utiliza un modelo de datos no relacional para almacenar y gestionar la información. Es una parte fundamental del desarrollo backend y te ayuda a crear aplicaciones escalables, seguras y eficientes. (MongoDB, Redis, Cassandra).
-                </p>
-                <h2 class="fuenteSeis fs-50 {{ this.categoria.color }}">Scaling Databases</h2>
-                <p class="text-light f-open-sans-c fs-20 lh-25">
-                    Proceso de aumentar la capacidad y el rendimiento de una base de datos para manejar un mayor volumen de datos y tráfico. Es una parte fundamental del desarrollo backend y te ayuda a crear aplicaciones escalables, seguras y eficientes. (Sharding, Replication, Caching).
-                </p>
-                <h2 class="fuenteSeis fs-50 {{ this.categoria.color }}">API</h2>
-                <p class="text-light f-open-sans-c fs-20 lh-25">
-                    Interfaz de programación de aplicaciones que te permite comunicarte con otros servicios y aplicaciones. Es una parte fundamental del desarrollo backend y te ayuda a crear aplicaciones escalables, seguras y eficientes. (REST, GraphQL).
-                </p>
-                <h2 class="fuenteSeis fs-50 {{ this.categoria.color }}">Caching</h2>
-                <p class="text-light f-open-sans-c fs-20 lh-25">
-                    Proceso de almacenar datos en memoria para acelerar el acceso y mejorar el rendimiento de una aplicación. Es una parte fundamental del desarrollo backend y te ayuda a crear aplicaciones escalables, seguras y eficientes. (Redis, Memcached).
-                </p>
-                <h2 class="fuenteSeis fs-50 {{ this.categoria.color }}">Web Security Knowledge</h2>
-                <p class="text-light f-open-sans-c fs-20 lh-25">
-                    Conocimientos sobre seguridad web que te ayudan a proteger tu aplicación y prevenir ataques cibernéticos. Son una parte fundamental del desarrollo backend y te ayudan a garantizar la seguridad, proteger la información confidencial y mantener la integridad de tu aplicación. (OWASP Top 10, HTTPS, CSRF).
-                </p>
-                <h2 class="fuenteSeis fs-50 {{ this.categoria.color }}">Testing</h2>
-                <p class="text-light f-open-sans-c fs-20 lh-25">
-                    Proceso de evaluación de tu código para garantizar que funcione correctamente y cumpla con los requisitos. Es una parte fundamental del desarrollo backend y te ayuda a detectar errores, mejorar la calidad y garantizar que tu código sea confiable. (Unit testing, Integration testing, End-to-end testing).
-                </p>
-                <h2 class="fuenteSeis fs-50 {{ this.categoria.color }}">CI/CD</h2>
-                <p class="text-light f-open-sans-c fs-20 lh-25">
-                    Prácticas y herramientas que te permiten automatizar el proceso de integración y entrega continua de tu código. Son una parte fundamental del desarrollo backend y te ayudan a mejorar la eficiencia, la calidad y la velocidad de tu desarrollo. (Jenkins, Travis CI, CircleCI).
-                </p>
-                <h2 class="fuenteSeis fs-50 {{ this.categoria.color }}">Design and Development Principies</h2>
-                <p class="text-light f-open-sans-c fs-20 lh-25">
-                    Principios y prácticas de diseño y desarrollo que te ayudan a crear aplicaciones escalables, seguras y eficientes. Son una parte fundamental del desarrollo backend y te ayudan a mejorar la calidad, la eficiencia y la experiencia del usuario. (SOLID, DRY, KISS).
-                </p>
-                <h2 class="fuenteSeis fs-50 {{ this.categoria.color }}">Arquitectural Patterns</h2>
-                <p class="text-light f-open-sans-c fs-20 lh-25">
-                    Patrones de arquitectura que te ayudan a organizar y estructurar tu código de manera eficiente. Son una parte fundamental del desarrollo backend y te ayudan a mantener tu código organizado, escalable y fácil de mantener. (MVC, MVVM, Microservices).
-                </p>
-
-                <h2 class="fuenteSeis fs-50 {{ this.categoria.color }}">Message Brokers</h2>
-                <p class="text-light f-open-sans-c fs-20 lh-25">
-                    Sistema de mensajería que te permite enviar y recibir mensajes entre aplicaciones y servicios. Es una parte fundamental del desarrollo backend y te ayuda a crear aplicaciones escalables, seguras y eficientes. (RabbitMQ, Kafka, ActiveMQ).
-                </p>
-                <h2 class="fuenteSeis fs-50 {{ this.categoria.color }}">Containerization vs Virtualization</h2>
-                <p class="text-light f-open-sans-c fs-20 lh-25">
-                    Técnicas de empaquetado y despliegue de aplicaciones que te permiten crear entornos aislados y portátiles. Son una parte fundamental del desarrollo backend y te ayudan a mejorar la eficiencia, la escalabilidad y la seguridad de tus aplicaciones. (Docker, Kubernetes, Vagrant).
-                </p>
-                <h2 class="fuenteSeis fs-50 {{ this.categoria.color }}">Server Send Events</h2>
-                <p class="text-light f-open-sans-c fs-20 lh-25">
-                    Tecnología que te permite enviar eventos desde el servidor al cliente de forma unidireccional. Es una parte fundamental del desarrollo backend y te ayuda a crear aplicaciones en tiempo real y mejorar la experiencia del usuario. (SSE, WebSockets).
-                </p>
-                <h2 class="fuenteSeis fs-50 {{ this.categoria.color }}">Web Sockets</h2>
-                <p class="text-light f-open-sans-c fs-20 lh-25">
-                    Tecnología que te permite establecer una conexión bidireccional entre el servidor y el cliente. Es una parte fundamental del desarrollo backend y te ayuda a crear aplicaciones en tiempo real y mejorar la experiencia del usuario. (SSE, WebSockets).
-                </p>
-                <h2 class="fuenteSeis fs-50 {{ this.categoria.color }}">Web Servers</h2>
-                <p class="text-light f-open-sans-c fs-20 lh-25">
-                    Servidor web que te permite alojar y servir tu aplicación en el lado del servidor. Es una parte fundamental del desarrollo backend y te ayuda a crear aplicaciones escalables, seguras y eficientes. (Nginx, Apache, IIS).
-                </p>
-                <h2 class="fuenteSeis fs-50 {{ this.categoria.color }}">Building for Scale</h2>
-                <p class="text-light f-open-sans-c fs-20 lh-25">
-                    Proceso de diseñar y desarrollar aplicaciones que puedan manejar un gran volumen de datos y tráfico. Es una parte fundamental del desarrollo backend y te ayuda a crear aplicaciones escalables, seguras y eficientes. (Load balancing, Caching, Sharding).
-                </p>
-                <h2 class="fuenteSeis fs-50 {{ this.categoria.color }}">DevOps</h2>
-                <p class="text-light f-open-sans-c fs-20 lh-25">
-                    Prácticas y herramientas que te permiten integrar el desarrollo y la operación de tu aplicación. Son una parte fundamental del desarrollo backend y te ayudan a mejorar la eficiencia, la calidad y la velocidad de tu desarrollo. (CI/CD, Monitoring, Automation).
-                </p>
             </div>
         </div>
-        
-        <div class="espaciado"></div>
-        <div class="row">
-            <div class="col-md-5"></div>
-            <div class="col-md-7">
-                
-            </div>
 
+        <div class="espaciado"></div>
+        <div class="col-md-1"></div>
     </div>
-    <div class="col-md-1"></div>
-</div>
