add notes.md references

--- a/src/app/features/blog/posts/developer/dev-category/dev-category.component.html
+++ b/src/app/features/blog/posts/developer/dev-category/dev-category.component.html
@@ -11,6 +11,4 @@
 
 
 <app-footer-home></app-footer-home>
-<div class="go-up" (click)="scroll(target)">
-    <i class="fa fa-chevron-up" aria-hidden="true"></i>
-</div>
+<go-up [target]="target"></go-up>
