--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -34,7 +34,7 @@
             <div class="col-1">
                 <div class="dropdown f-open-sans-c text-center">
                     <a type="button" data-bs-toggle="dropdown" aria-expanded="false" class="dropdown-toggle">
-                        <img src="assets/img/traduccion.png" alt="icon png" height="40px" width="auto"
+                        <img src="assets/img/icons/traduccion.png" alt="icon png" height="40px" width="auto"
                             class="drop">
                     </a>
                     <div class="dropdown-menu bg-transparent border text-light">
