Refactorig post category dev

--- a/src/app/features/blog/posts/developer/dev-category/dev-category-content/dev-category-content.component.html
+++ b/src/app/features/blog/posts/developer/dev-category/dev-category-content/dev-category-content.component.html
@@ -5,11 +5,11 @@
         <div class="row">
 
             <div class="col-md-5">
-                <app-first-description-block [content]="frontendRoadMap" [categoryColor]="this.categoria.color"
-                    [ref]="'front'"></app-first-description-block>
+                <app-first-description-block [content]="fundamentalsRoadMap" [categoryColor]="this.categoria.color"
+                    [ref]="'fundament'"></app-first-description-block>
             </div>
             <div class="col-md-7">
-                <h2 class="text-light fuenteOcho categorias title-menu">ROADMAP - FRONTEND DEVELOPER</h2>
+                <h2 class="text-light fuenteOcho categorias title-menu">{{ 'DEVELOPER.developer.fundamentalsRoadmap.titulo' | translate }}</h2>
                 <img src="assets/img/extructures/frontend.png" alt="Roadmap Frontend dev" class="img-fluid drop">
                 <p class="text-light f-open-sans-c lh-25 text-end"><small>Basada en <a href="https://roadmap.sh/"
                             target="_blank">Roadmap.sh</a></small></p>
