--- a/src/app/shared/components/top-tecnology/top-tecnology.component.html
+++ b/src/app/shared/components/top-tecnology/top-tecnology.component.html
@@ -9,7 +9,7 @@
         </div>
         <div class="row">
             <div class="col-md-3 pt-5">
-                <h4 class="tituloPost f-bebas c7">{{ 'Framework' | translate }}</h4>
+                <h4 class="f-bebas c7 text-light">{{ 'Framework' | translate }}</h4>
                 <p class="f-open-sans-c fs-15 lh-17 c7">
                     {{ 'PreguntaFramework' | translate}}
                 </p>
@@ -28,7 +28,7 @@
                 </div>
             </div>
             <div class="col-md-3 pt-5">
-                <h4 class="tituloPost f-bebas c7">{{ 'Lenguajes' | translate }}</h4>
+                <h4 class="text-light f-bebas c7">{{ 'Lenguajes' | translate }}</h4>
                 <p class="f-open-sans-c fs-15 lh-17 c7">
                     {{ 'PreguntaLenguajes' | translate }}
                 </p>
@@ -47,7 +47,7 @@
                 </div>
             </div>
             <div class="col-md-3 pt-5">
-                <h4 class="tituloPost f-bebas c7">{{ 'BasesDeDatos' | translate }}</h4>
+                <h4 class="f-bebas c7 text-light">{{ 'BasesDeDatos' | translate }}</h4>
                 <p class="f-open-sans-c fs-15 lh-17 c7">
                     {{ 'PreguntaBasesDatos' | translate }}
                 </p>
@@ -66,7 +66,7 @@
                 </div>
             </div>
             <div class="col-md-3 pt-5">
-                <h4 class="tituloPost f-bebas c7">IDE's</h4>
+                <h4 class="f-bebas c7 text-light">IDE's</h4>
                 <p class="f-open-sans-c fs-15 lh-17 c7">
                     {{ 'PreguntaIDEs' | translate }}
                 </p>
