--- a/src/app/shared/components/galery-post/galery-post.component.html
+++ b/src/app/shared/components/galery-post/galery-post.component.html
@@ -8,7 +8,7 @@
             <div class="col-md-8"></div>
         </div> 
         <div class="row">
-            <div class="col-md-4 p-5" *ngFor="let post of this.postPaginar">
+            <div class="col-12 col-md-6 col-lg-4 p-5" *ngFor="let post of this.postPaginar">
                 <div class="d-flex justify-content-end mb-2 drop-two">
                     <a href="{{ this.retornarDatoCategoria(post.categoria,11) }}">
                         <img src="{{ this.retornarDatoCategoria(post.categoria,12) }}" alt="" height="30" width="auto">
@@ -24,7 +24,7 @@
                 <div class="mt-5">
                     <h4 class="tituloPost f-bebas">{{ post.nombre | translate }}</h4>
                 </div>
-                <p class="f-open-sans-c fs-17 lh-23 text-light">{{ post.descripcionCorta | translate }}</p>
+                <p class="f-open-sans-c fs-20 lh-20 text-light">{{ post.descripcionCorta | translate }}</p>
                 <time><p class="f-shadow-into-l text-light fs-15 m-0">{{ post.fechaActualizacion? post.fechaActualizacion : post.fechaCreacion | translate }}</p></time>
                 <a class="f-open-sans-c leerMas mt-2" href="{{ post.ruta }}">{{ 'LeerMas' | translate }} &gt;</a>
             </div>
