add description category content

--- a/src/app/features/blog/posts/developer/dev-category/dev-category-content/dev-category-content.component.html
+++ b/src/app/features/blog/posts/developer/dev-category/dev-category-content/dev-category-content.component.html
@@ -10,7 +10,7 @@
             </div>
             <div class="col-md-7">
                 <h2 class="text-light fuenteOcho fs-50">{{ 'DEVELOPER.developer.fundamentalsRoadmap.titulo' | translate }}</h2>
-                <img src="assets/img/extructures/frontend.png" alt="Roadmap Frontend dev" class="img-fluid drop">
+                <img src="assets/img/extructures/roadmap - fundaments dev.drawio.png" alt="Roadmap Frontend dev" class="img-fluid drop">
                 <p class="text-light f-open-sans-c lh-25 text-end"><small>Basada en <a href="https://roadmap.sh/"
                             target="_blank">Roadmap.sh</a></small></p>
             </div>
