--- a/src/app/features/blog/posts/developer/dev-category/dev-category.component.html
+++ b/src/app/features/blog/posts/developer/dev-category/dev-category.component.html
@@ -5,9 +5,10 @@
 
 <app-category-header [nombreCategoria]="'developer'" [idPost]="idPost" [adds]="partsAdds"></app-category-header>
 
+<app-dev-category-header [nombreCategoria]="'developer'" [idPost]="idPost" [adds]="partsAdds"></app-dev-category-header>
+
 <app-dev-category-content [nombreCategoria]="'developer'" [adds]="partsAdds"></app-dev-category-content>
 
-<!-- <app-dev-category-header [nombreCategoria]="'developer'" [idPost]="idPost" [adds]="partsAdds"></app-dev-category-header> -->
 
 
 <app-footer-home></app-footer-home>
