refactoring in text and content category developer

--- a/src/app/features/blog/posts/developer/dev-category/dev-category-header/dev-category-header.component.html
+++ b/src/app/features/blog/posts/developer/dev-category/dev-category-header/dev-category-header.component.html
@@ -4,40 +4,46 @@
     <div class="col-md-10">
         <div class="row">
             <div class="col-md-6"></div>
-            <div class="col-md-6">
-                <h1 class="c7 fuenteSeis">QUE LA IA ESCRIBA EL CÓDIGO; HAY QUE SABER QUE ESTA ESCRIBIENDO</h1>
+            <div class="col-md-6 border-bottom pb-3">
                 <p class="c7 f-open-sans-c fs-20 lh-20">
-                    Desde el momento en que estoy redactando este texto hasta el momento en que estés leyendo —por las
-                    razones
-                    que te hayan llevado a él—, posiblemente hayan surgido nuevos lenguajes, frameworks y tecnologías.
-                    Para
-                    centralizar todo, utilizamos entonces la categoría <em>developer</em>.<br><br>
-
-                    Esperaba hacer algo gracioso para captar la atención; sin embargo, no encajo en el papel de
-                    humorista. Pero
-                    sí me voy a centrar en ofrecer un valor que hubiese querido encontrar para mí mismo.<br><br>
-
-                    Teniendo esto en cuenta, <b>a continuación aparecen los temas fundamentales en el desarrollo de
-                        software</b> hasta
-                    el año 2025.<br><br>
-
-                    Me tomó alrededor de un mes aprender de memoria todos y cada uno de los temas incluidos. De a
-                    poquito, cada
-                    día me aprendía uno. Considero que debe ser así para todos, como si fuera el Padre Nuestro para los
-                    católicos, ya que la inteligencia artificial se encargará de escribir todo el código, pero nosotros,
-                    desde
-                    arriba y vigilantes, tendremos que conocer toda la estructura, aplicar correcciones y, en el peor de
-                    los
-                    casos, rehacer.
+                    <em>'Developer'</em>, se usará como categoría para clasificar temas al desarrollo de software en
+                    general, incluso abarcar categorías que no se incluyan en el blog.
                 </p>
-                <section class="post-meta">
-                    <p class="c7 f-open-sans-c fs-20 lh-20">Por: <a href="/perfil-del-autor" rel="author">Alex M.</a></p>
-                </section>
             </div>
         </div>
+        <div class="espaciado"></div>
+        <div class="row">
+            <div class="col-md-6 border-coments p-5">
+                <h1 class="text-light f-yanone fs-30 lh-30">QUE LA IA ESCRIBA EL CÓDIGO; HAY QUE SABER QUE ESTA
+                    ESCRIBIENDO</h1>
+                <p class="c7 f-open-sans-c fs-20 lh-20">
+                    Me ha sucedido en varias ocasiones que, al estar desarrollando en distintos ámbitos —como frontend,
+                    backend, DevOps, arquitectura, etc.— y apoyarme en un asistente de IA, este introduce errores en el
+                    código que pasan desapercibidos para él.<br><br>
 
+                    En una situación particular, mientras trabajaba en frontend, los errores surgían debido a la
+                    respuesta de un servicio creado en otro entorno y con un modelo totalmente distinto. Tanto para la
+                    IA como para mí, que estaba desarrollando en el frontend, parte de la cadena de producción del
+                    software era desconocida.<br><br>
 
+                    A raíz de esto, comprendí la importancia de tener claridad sobre todo el entorno que rodea la
+                    producción de software y decidí repasar los conceptos fundamentales. Esto me permitiría contar con
+                    una base sólida que me guiara al revisar los bloques de código generados por mi fiel amigo/a: la
+                    inteligencia artificial.<br><br>
+
+                    El siguiente grupo de temas me llevó un mes memorizarlo, y tomé esta decisión porque en varias
+                    ocasiones he necesitado saber en qué punto del contexto de desarrollo me encuentro cuando analizo
+                    los errores detectados.
+                </p>
+                <section class="post-meta">
+                    <p class="c7 fuenteCuatro fs-20 lh-20 text-end"><a href="/perfil-del-autor" rel="author">Alex M.</a>
+                    </p>
+                </section>
+            </div>
+            <div class="col-md-6"></div>
+        </div>
     </div>
     <div class="col-md-1"></div>
 </div>
+
 <div class="espaciado"></div>
