add content and better practicies

--- a/src/app/features/blog/posts/developer/dev-category/dev-category-header/dev-category-header.component.html
+++ b/src/app/features/blog/posts/developer/dev-category/dev-category-header/dev-category-header.component.html
@@ -36,7 +36,7 @@
                     los errores detectados.
                 </p>
                 <section class="post-meta">
-                    <p class="c7 fuenteCuatro fs-20 lh-20 text-end"><a href="/perfil-del-autor" rel="author">Alex M.</a>
+                    <p class="c7 fuenteCuatro fs-20 lh-20 text-end"><a href="/perfil-del-autor" rel="author" class="text-decoration-none">Alex M.</a>
                     </p>
                 </section>
             </div>
