--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,1 +1,34 @@
-<p>footer works!</p>
+<div class="row">
+    <div class="col-sm-1"></div>
+    <div class="col-sm-10 f-open-sans-c fs-17">
+        <div class="espacio"></div>
+        <footer>
+            <div class="row">
+                <div class="col-sm-4 footer">
+                    <a href="https://2014maximo.github.io/workface">
+                        <img src="https://2014maximo.github.io/workface/assets/img/icons/logo-workface-white.png" alt="logo-workface"
+                            height="80" width="auto" class="drop mt-3 mb-3">
+                    </a>
+                    <a class="trucos" href="https://2014maximo.github.io/trucospadesarrollo">
+                        <h3 class="fuenteOcho text-light m-0">TRUCOS PA' DESARROLLO</h3>
+                    </a>
+
+                    <div class="d-flex footer-icons mt-2">
+                        <a class="wrappers github me-2" href="https://github.com/2014maximo" target="_blank">
+                            <i class="bi bi-github github"></i>
+                        </a>
+                        <a class="wrappers linkedin" href="https://linkedin.com/in/alex-uriel-munoz" target="_blank">
+                            <i class="bi bi-linkedin linkedin"></i>
+                        </a>
+                    </div>
+                    <p class="text-secondary"><small>® 2 0 2 5 --- A l e x  M u ñ o z  ---  D e v e l o p e r</small></p>
+
+                </div>
+                <div class="col-sm-8"></div>
+            </div>
+
+        </footer>
+        <div class="espacio"></div>
+    </div>
+    <div class="col-sm-1"></div>
+</div>
