--- a/src/app/features/blog/posts/developer/dev-category/dev-category-header/dev-category-header.component.html
+++ b/src/app/features/blog/posts/developer/dev-category/dev-category-header/dev-category-header.component.html
@@ -35,7 +35,9 @@
                     ocasiones he necesitado saber en qué punto del contexto de desarrollo me encuentro cuando analizo
                     los errores detectados.
                 </p>
-                <section class="post-meta">
+                <section class="post-meta text-end">
+                        <img src="assets/img/author.png" alt="" width="auto" height="60" class="rounded-circle mr-3 border mb-1">
+
                     <p class="c7 fuenteCuatro fs-20 lh-20 text-end"><a href="/perfil-del-autor" rel="author" class="text-decoration-none">Alex M.</a>
                     </p>
                 </section>
