refactoring text post category dev

--- a/src/app/features/blog/posts/developer/dev-category/dev-category-content/dev-category-content.component.html
+++ b/src/app/features/blog/posts/developer/dev-category/dev-category-content/dev-category-content.component.html
@@ -7,15 +7,18 @@
             <div class="col-md-5">
                 <app-first-description-block [content]="fundamentalsRoadMap" [categoryColor]="this.categoria.color"
                     [ref]="'fundament'"></app-first-description-block>
+                <div class="text-success">
+                    <hr>
+                </div>
+                <div class="espacio"></div>
             </div>
             <div class="col-md-7">
-                <h2 class="text-light fuenteOcho fs-50">{{ 'DEVELOPER.developer.fundamentalsRoadmap.titulo' | translate }}</h2>
-                <img src="assets/img/extructures/roadmap - fundamentos dev.drawio.png" alt="Roadmap Frontend dev" class="img-fluid drop">
-                <p class="text-light f-open-sans-c lh-25 text-end"><small>Basada en <a href="https://roadmap.sh/"
-                            target="_blank">Roadmap.sh</a></small></p>
+                <h2 class="text-light fuenteOcho fs-50 text-center mb-5">{{
+                    'DEVELOPER.developer.fundamentalsRoadmap.titulo' | translate }}</h2>
+                <img src="assets/img/extructures/roadmap - fundamentos dev.drawio.png" alt="Roadmap Frontend dev"
+                    class="img-fluid drop">
             </div>
         </div>
-
 
         <div class="espaciado"></div>
         <div class="col-md-1"></div>
