--- a/src/app/features/blog/posts/developer/dev-category/dev-category-content/dev-category-content.component.html
+++ b/src/app/features/blog/posts/developer/dev-category/dev-category-content/dev-category-content.component.html
@@ -15,8 +15,11 @@
             <div class="col-md-7">
                 <h2 class="text-light fuenteOcho fs-50 text-center mb-5">{{
                     'DEVELOPER.developer.fundamentalsRoadmap.titulo' | translate }}</h2>
-                <img src="assets/img/extructures/roadmap - fundamentos dev.drawio.png" alt="Roadmap Frontend dev"
-                    class="img-fluid drop">
+                    <app-image-adapter
+                        [url]="'assets/img/extructures/roadmap - fundamentos dev.drawio.png'"
+                        [class]="'img-fluid'"></app-image-adapter>
+<!--                 <img src="assets/img/extructures/roadmap - fundamentos dev.drawio.png" alt="Roadmap Frontend dev"
+                    class="img-fluid drop"> -->
             </div>
         </div>
 
