add functionality zoom in component image-adapter, extructures, styles, and functions

--- a/src/app/features/blog/posts/developer/dev-category/dev-category-content/dev-category-content.component.html
+++ b/src/app/features/blog/posts/developer/dev-category/dev-category-content/dev-category-content.component.html
@@ -16,8 +16,8 @@
                 <h2 class="text-light fuenteOcho fs-50 text-center mb-5">{{
                     'DEVELOPER.developer.fundamentalsRoadmap.titulo' | translate }}</h2>
                     <app-image-adapter
-                        [url]="'assets/img/extructures/roadmap - fundamentos dev.drawio.png'"
-                        [class]="'img-fluid'"></app-image-adapter>
+                        [src]="'assets/img/extructures/roadmap - fundamentos dev.drawio.png'"
+                        [customClass]="'img-fluid'"></app-image-adapter>
 <!--                 <img src="assets/img/extructures/roadmap - fundamentos dev.drawio.png" alt="Roadmap Frontend dev"
                     class="img-fluid drop"> -->
             </div>
