--- a/src/app/shared/components/image-adapter/image-adapter.component.html
+++ b/src/app/shared/components/image-adapter/image-adapter.component.html
@@ -1,1 +1,47 @@
-<img [attr.src]=[url] alt="" [attr.class]=[class]>
+<!-- <img [attr.src]=[url] alt="" [attr.class]=[class]> -->
+
+<div class="image-container">
+  <img 
+    [src]="src" 
+    [alt]="alt"
+    [ngStyle]="imageStyles"
+    class="main-image"
+    (click)="openModal($event)"
+  />
+  
+  <button 
+    *ngIf="showZoomIcon"
+    class="zoom-icon"
+    [class]="'zoom-icon--' + zoomIconPosition"
+    (click)="openModal($event)"
+    aria-label="Ampliar imagen"
+  >
+    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z" fill="currentColor"/>
+    </svg>
+  </button>
+</div>
+
+<!-- Modal -->
+<div 
+  *ngIf="isModalOpen"
+  class="image-modal"
+  (click)="onModalClick($event)"
+>
+  <div class="modal-content">
+    <button class="modal-close" (click)="closeModal()" aria-label="Cerrar">
+      <svg width="32" height="32" viewBox="0 0 24 24" fill="none">
+        <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z" fill="currentColor"/>
+      </svg>
+    </button>
+    
+    <div class="modal-image-container">
+      <img 
+        [src]="src" 
+        [alt]="alt"
+        class="modal-image"
+        (click)="$event.stopPropagation()"
+      />
+    </div>
+  </div>
+</div>
