--- a/src/app/features/blog/posts/angular/angular-category/angular-category.component.html
+++ b/src/app/features/blog/posts/angular/angular-category/angular-category.component.html
@@ -1,1 +1,51 @@
-<p>angular-category works!</p>
+<div #target></div>
+<app-header></app-header>
+<div class="espaciado"></div>
+
+<app-category-header [nombreCategoria]="'angular'" [idPost]="idPost" [adds]="partsAdds"></app-category-header>
+
+<div class="espaciado"></div>
+<div class="row">
+    <div class="col-md-1"></div>
+    <div class="col-md-10">
+        <div class="row">
+    <div class="col-md-6 border-coments p-5">
+        <h1 class="text-light f-yanone fs-30 lh-30">ANGULAR UN FRAMEWORK MÁS QUE IDEAL</h1>
+        <p class="c7 f-open-sans-c fs-20 lh-20">
+            Otro de los hijos de Google, 'Angular' ya evolucionado ha permanecido firme mejorando y puliéndose cada vez
+            más en cada una de las versiones que libera su equipo de desarrollo integrado por Minko Gechev, Igor Minar,
+            Alex Rickabaugh, Kristiyan Kostadinov, Emily Meller & Jessica Janiuk. Sin dejar de lado a la gran comunidad
+            de colaboradores pues permanece abierto en Github.<br><br>
+
+            Actualmente es adoptado para ser el software robusto en grandes empresas como Microsoft, Adobe, Netflix,
+            HBO, Sony, entre muchas, especialmente por su alta capacidad de ser organizado y poder adaptarse a los
+            intereses e ideales de estos gigantes como son crecer y poder ser mantenidos en el tiempo.<br><br>
+
+            Su participación activa apunta más a empresas que a Startups, SPAs y apps dinámicas, manteniéndose por
+            encima de Vue y Svelte con una popularidad de (16-22%) Estable.<br><br>
+
+            Debido a su curva de aprendizaje es descartado en proyectos en sus inicios.<br><br>
+
+            Angular, en su nombre comunica que este no es solo una librería, sino un sistema estructural completo que
+            proporciona los "ángulos de soporte" arquitectónicos para construir aplicaciones web robustas y mantenibles,
+            especialmente a gran escala.
+        </p>
+        <section class="post-meta text-end">
+            <img src="assets/img/author.png" alt="" width="auto" height="60" class="rounded-circle mr-3 border mb-1">
+
+            <p class="c7 fuenteCuatro fs-20 lh-20 text-end"><a href="https://2014maximo.github.io/alexmunoz/"
+                    rel="author" class="text-decoration-none">Alex M.</a>
+            </p>
+        </section>
+    </div>
+    <div class="col-md-6"></div>
+</div>
+    </div>
+    <div class="col-md-1"></div>
+</div>
+
+
+
+
+<app-footer></app-footer>
+<go-up [target]="target"></go-up>
